--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title subtitle">Strategy</h3>
+              <h3 class="features-title title">Strategy</h3>
               <p class="features-text text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -99,7 +99,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title subtitle">Punctuality</h3>
+              <h3 class="features-title title">Punctuality</h3>
               <p class="features-text text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -114,7 +114,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title subtitle">Diligence</h3>
+              <h3 class="features-title title">Diligence</h3>
               <p class="features-text text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -129,7 +129,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title subtitle">Technologies</h3>
+              <h3 class="features-title title">Technologies</h3>
               <p class="features-text text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -175,7 +175,7 @@
         </div>
       </section> -->
       <!--Section 3-->
-      <!-- <section class="teamcards">
+      <section class="teamcards">
         <div class="container">
           <h2 class="teamcards-title title">Our Team</h2>
           <ul class="teamcards-list list">
@@ -433,7 +433,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Section 4 -->
 
