--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section> -->
 
       <!--Section_1-->
-      <section class="features">
+      <!-- <section class="features">
         <div class="container features-container">
           <h2 class="visually-hidden">Features</h2>
 
@@ -84,7 +84,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title title">Strategy</h3>
+              <h3 class="features-title">Strategy</h3>
               <p class="features-text text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -99,7 +99,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title title">Punctuality</h3>
+              <h3 class="features-title">Punctuality</h3>
               <p class="features-text text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -114,7 +114,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title title">Diligence</h3>
+              <h3 class="features-title">Diligence</h3>
               <p class="features-text text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -129,7 +129,7 @@
                   </svg>
                 </div>
               </div>
-              <h3 class="features-title title">Technologies</h3>
+              <h3 class="features-title">Technologies</h3>
               <p class="features-text text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -137,12 +137,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!--Section_2-->
-      <!-- <section class="section">
+      <!--Section 2-->
+      <section class="section">
         <div class="container">
-          <h2 class="section-title title">What are we doing</h2>
+          <h2 class="section-title">What are we doing</h2>
           <ul class="section-list list">
             <li class="section-item">
               <img
@@ -173,11 +173,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Section 3-->
-      <section class="teamcards">
+      <!-- <section class="teamcards">
         <div class="container">
-          <h2 class="teamcards-title title">Our Team</h2>
+          <h2 class="teamcards-title">Our Team</h2>
           <ul class="teamcards-list list">
             <li class="teamcards-item">
               <img
@@ -188,7 +188,7 @@
                 class="teamcards-img"
               />
               <div class="teamcards-wrap">
-                <h3 class="teamcards-subtitle subtitle">Mark Guerrero</h3>
+                <h3 class="teamcards-subtitle">Mark Guerrero</h3>
                 <p class="teamcards-text text">Product Designer</p>
                 <ul class="teamcards-soc-list list">
                   <li class="teamcards-soc-item">
@@ -251,7 +251,7 @@
                 class="teamcards-img"
               />
               <div class="teamcards-wrap">
-                <h3 class="teamcards-subtitle subtitle">Tom Ford</h3>
+                <h3 class="teamcards-subtitle">Tom Ford</h3>
                 <p class="teamcards-text text">Frontend Developer</p>
                 <ul class="teamcards-soc-list list">
                   <li class="teamcards-soc-item">
@@ -314,7 +314,7 @@
                 class="teamcards-img"
               />
               <div class="teamcards-wrap">
-                <h3 class="teamcards-subtitle subtitle">Camila Garcia</h3>
+                <h3 class="teamcards-subtitle">Camila Garcia</h3>
                 <p class="teamcards-text text">Marketing</p>
                 <ul class="teamcards-soc-list list">
                   <li class="teamcards-soc-item">
@@ -377,7 +377,7 @@
                 class="teamcards-img"
               />
               <div class="teamcards-wrap">
-                <h3 class="teamcards-subtitle subtitle">Daniel Wilson</h3>
+                <h3 class="teamcards-subtitle">Daniel Wilson</h3>
                 <p class="teamcards-text text">UI Designer</p>
                 <ul class="teamcards-soc-list list">
                   <li class="teamcards-soc-item">
@@ -433,13 +433,13 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Section 4 -->
 
       <!-- <section class="costumers">
         <div class="container">
-          <h2 class="costumers-title title">Customers</h2>
+          <h2 class="costumers-title">Customers</h2>
           <ul class="costumers-list list">
             <li class="costumers-item">
               <a class="costumers-link link" href="">
@@ -488,7 +488,7 @@
       </section> -->
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-wrap">
           <a href="./index.html" class="footer-link link"
@@ -574,7 +574,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-modal" data-modal-close>
