media section hero and start footer

--- a/index.html
+++ b/index.html
@@ -61,29 +61,28 @@
 
     <main>
       <!--Hero-->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
-      <!--Section_1-->
-      <!-- <section class="features">
+      <!--Section 1-->
+      <section class="features">
         <div class="container features-container">
           <h2 class="visually-hidden">Features</h2>
 
           <ul class="features-list list">
             <li class="features-item">
-              <div class="media-wrap">
-                <div class="features-wrap">
-                  <svg width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna"></use>
-                  </svg>
-                </div>
+              <div class="features-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
               </div>
+
               <h3 class="features-title">Strategy</h3>
               <p class="features-text text">
                 Our goal is to identify the business problem to walk away with
@@ -92,13 +91,12 @@
             </li>
 
             <li class="features-item">
-              <div class="media-wrap">
-                <div class="features-wrap">
-                  <svg width="64" height="64">
-                    <use href="./images/icons.svg#icon-clock"></use>
-                  </svg>
-                </div>
+              <div class="features-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
               </div>
+
               <h3 class="features-title">Punctuality</h3>
               <p class="features-text text">
                 Bring the key message to the brand's audience for the best price
@@ -107,13 +105,12 @@
             </li>
 
             <li class="features-item">
-              <div class="media-wrap">
-                <div class="features-wrap">
-                  <svg width="64" height="64">
-                    <use href="./images/icons.svg#icon-diagram"></use>
-                  </svg>
-                </div>
+              <div class="features-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
               </div>
+
               <h3 class="features-title">Diligence</h3>
               <p class="features-text text">
                 Research and confirm brands that present the strongest digital
@@ -122,13 +119,12 @@
             </li>
 
             <li class="features-item">
-              <div class="media-wrap">
-                <div class="features-wrap">
-                  <svg width="64" height="64">
-                    <use href="./images/icons.svg#icon-astronaut"></use>
-                  </svg>
-                </div>
+              <div class="features-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
               </div>
+
               <h3 class="features-title">Technologies</h3>
               <p class="features-text text">
                 Design practice focused on digital experiences. We bring forth a
@@ -137,7 +133,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Section 2-->
       <section class="section">
@@ -147,6 +143,7 @@
             <li class="section-item">
               <img
                 class="section-img"
+                srcset="./images/img_1.jpg 1x, ./images/img_1_2x.jpg 2x"
                 src="./images/img_1.jpg"
                 alt="monitor_screen"
                 width="360"
@@ -156,6 +153,7 @@
             <li class="section-item">
               <img
                 class="section-img"
+                srcset="./images/img_2.jpg 1x, ./images/img_2_2x.jpg 2x"
                 src="./images/img_2.jpg"
                 alt="mobile_phone"
                 width="360"
@@ -165,6 +163,7 @@
             <li class="section-item">
               <img
                 class="section-img"
+                srcset="./images/img_3.jpg 1x, ./images/img_3_2x.jpg 2x"
                 src="./images/img_3.jpg"
                 alt="mobile_phone_and_laptop"
                 width="360"
@@ -175,12 +174,13 @@
         </div>
       </section>
       <!--Section 3-->
-      <!-- <section class="teamcards">
+      <section class="teamcards">
         <div class="container">
           <h2 class="teamcards-title">Our Team</h2>
           <ul class="teamcards-list list">
             <li class="teamcards-item">
               <img
+                srcset="./images/team_img1.jpg 1x, ./images/team_img1_2x.jpg 2x"
                 src="./images/team_img1.jpg"
                 alt="Designer_Mark"
                 width="264"
@@ -244,6 +244,7 @@
             </li>
             <li class="teamcards-item">
               <img
+                srcset="./images/team_img2.jpg 1x, ./images/team_img2_2x.jpg 2x"
                 src="./images/team_img2.jpg"
                 alt="Frontend_Tom"
                 width="264"
@@ -307,6 +308,7 @@
             </li>
             <li class="teamcards-item">
               <img
+                srcset="./images/team_img3.jpg 1x, ./images/team_img3_2x.jpg 2x"
                 src="./images/team_img3.jpg"
                 alt="Marketing_Camila"
                 width="264"
@@ -370,6 +372,7 @@
             </li>
             <li class="teamcards-item">
               <img
+                srcset="./images/team_img4.jpg 1x, ./images/team_img4_2x.jpg 2x"
                 src="./images/team_img4.jpg"
                 alt="Designer_Deniel"
                 width="264"
@@ -433,11 +436,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Section 4 -->
 
-      <!-- <section class="costumers">
+      <section class="costumers">
         <div class="container">
           <h2 class="costumers-title">Customers</h2>
           <ul class="costumers-list list">
@@ -485,9 +488,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
+
     <!-- Footer -->
+
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-wrap">
