--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- Header -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-flex">
         <nav class="header-nav">
           <a href="./index.html" class="header-link-logo link"
@@ -56,8 +56,103 @@
             </li>
           </ul>
         </address>
+        <button class="mob-open-btn js-open-menu" type="button">
+          <svg width="32" height="22" class="head-mob-icon">
+            <use href="./images/icons.svg#mob-menu-open-icon"></use>
+          </svg>
+        </button>
+        <div class="mob-menu js-menu-container is-hidden">
+          <div>
+            <button type="button" class="mob-close-btn js-close-menu">
+              <svg width="8" height="8" class="icon-close-mob-menu">
+                <use href="./images/icons.svg#icon-Vector"></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./index.html">Studio</a>
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <address class="mob-menu-address">
+              <ul class="mob-menu-address-list list">
+                <li class="mob-menu-address-item">
+                  <a class="mob-menu-address-link link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mob-menu-address-item">
+                  <a
+                    class="mob-menu-address-link mail link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="mob-menu-soc-list list">
+              <li class="mob-menu-soc-item">
+                <a
+                  href=""
+                  class="mob-menu-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg width="16" height="16" class="mob-menu-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-soc-item">
+                <a
+                  href=""
+                  class="mob-menu-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg width="16" height="16" class="mob-menu-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-soc-item">
+                <a
+                  href=""
+                  class="mob-menu-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg width="16" height="16" class="mob-menu-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-soc-item">
+                <a
+                  href=""
+                  class="mob-menu-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg width="16" height="16" class="mob-menu-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!--Hero-->
@@ -499,7 +594,8 @@
           <a href="./index.html" class="footer-link link"
             >Web<span class="footer-logo">Studio</span></a
           >
-          <p class="footer-text text">
+
+          <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
@@ -673,5 +769,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
