--- a/portfolio.html
+++ b/portfolio.html
@@ -103,10 +103,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">
-                    Banking App Interface Concept
-                  </h2>
-                  <p class="project-text text">App</p>
+                  <h2 class="project-title">Banking App Interface Concept</h2>
+                  <p class="project-text">App</p>
                 </div>
               </a>
             </li>
@@ -127,8 +125,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Cashless Payment</h2>
-                  <p class="project-text text">Marketing</p>
+                  <h2 class="project-title">Cashless Payment</h2>
+                  <p class="project-text">Marketing</p>
                 </div>
               </a>
             </li>
@@ -149,8 +147,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Meditation App</h2>
-                  <p class="project-text text">App</p>
+                  <h2 class="project-title">Meditation App</h2>
+                  <p class="project-text">App</p>
                 </div>
               </a>
             </li>
@@ -171,8 +169,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Taxi Service</h2>
-                  <p class="project-text text">Marketing</p>
+                  <h2 class="project-title">Taxi Service</h2>
+                  <p class="project-text">Marketing</p>
                 </div>
               </a>
             </li>
@@ -193,8 +191,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Screen Illustrations</h2>
-                  <p class="project-text text">Design</p>
+                  <h2 class="project-title">Screen Illustrations</h2>
+                  <p class="project-text">Design</p>
                 </div>
               </a>
             </li>
@@ -215,8 +213,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Online Courses</h2>
-                  <p class="project-text text">Marketing</p>
+                  <h2 class="project-title">Online Courses</h2>
+                  <p class="project-text">Marketing</p>
                 </div>
               </a>
             </li>
@@ -237,10 +235,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">
-                    Instagram Stories Concept
-                  </h2>
-                  <p class="project-text text">Design</p>
+                  <h2 class="project-title">Instagram Stories Concept</h2>
+                  <p class="project-text">Design</p>
                 </div>
               </a>
             </li>
@@ -261,8 +257,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Organic Food</h2>
-                  <p class="project-text text">Web Site</p>
+                  <h2 class="project-title">Organic Food</h2>
+                  <p class="project-text">Web Site</p>
                 </div>
               </a>
             </li>
@@ -283,8 +279,8 @@
                   </p>
                 </div>
                 <div class="project-wrap">
-                  <h2 class="project-title subtitle">Fresh Coffee</h2>
-                  <p class="project-text text">Web Site</p>
+                  <h2 class="project-title">Fresh Coffee</h2>
+                  <p class="project-text">Web Site</p>
                 </div>
               </a>
             </li>
@@ -299,7 +295,7 @@
           <a href="./index.html" class="footer-link link"
             >Web<span class="footer-logo">Studio</span></a
           >
-          <p class="footer-text text">
+          <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
