--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             </button>
             <ul class="mob-menu-list list">
               <li class="mob-menu-item">
-                <a class="mob-menu-link link" href="./index.html">Studio</a>
+                <a class="mob-menu-link link-color link" href="./index.html"
+                  >Studio</a
+                >
               </li>
               <li class="mob-menu-item">
                 <a class="mob-menu-link link" href="./portfolio.html"
@@ -86,13 +88,13 @@
             <address class="mob-menu-address">
               <ul class="mob-menu-address-list list">
                 <li class="mob-menu-address-item">
-                  <a class="mob-menu-address-link link" href="tel:+110001111111"
+                  <a class="mob-menu-phone-link link" href="tel:+110001111111"
                     >+11 (000) 111-11-11</a
                   >
                 </li>
                 <li class="mob-menu-address-item">
                   <a
-                    class="mob-menu-address-link mail link"
+                    class="mob-menu-mail-link link"
                     href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
                   >
